Added product icons and styling

--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -4,7 +4,7 @@ body
   margin 0
   background white
   font-family Source Sans Pro, Tahoma, Arial, sans
-  font-size (20/16)em
+  font-size (22/16)em
   color #222
 
 // layout
@@ -26,11 +26,28 @@ body
   text-align center
 
 .product
-  min-height 40vh
-  padding 2em 0
+  padding 50px 0
 
-  &:nth-child(even)
-    background #eee
+.product--drawstring
+  background #fff9ad
+
+.product--genome
+  background #fff
+
+.product--seconds
+  background #64297a
+  color white
+
+.product--summer
+  background #b5e9fb
+
+.product--superscript
+  background #582d3a
+  color white
+
+.product-icon
+  display block
+  margin 0 auto 1em
 
 .product-title
 .product-summary
@@ -38,7 +55,12 @@ body
   text-align center
 
 .product-title
+  margin 0
   font-size 2em
+  font-weight 300
+
+.product-summary
+  margin-top 0
   font-weight 300
 
 .product-links
