--- a/styles/site.css
+++ b/styles/site.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   background: #fff;
   font-family: Source Sans Pro, Tahoma, Arial, sans;
-  font-size: 1.25em;
+  font-size: 1.375em;
   color: #222;
 }
 .content {
@@ -20,11 +20,28 @@ body {
   text-align: center;
 }
 .product {
-  min-height: 40vh;
-  padding: 2em 0;
+  padding: 50px 0;
 }
-.product:nth-child(even) {
-  background: #eee;
+.product--drawstring {
+  background: #fff9ad;
+}
+.product--genome {
+  background: #fff;
+}
+.product--seconds {
+  background: #64297a;
+  color: #fff;
+}
+.product--summer {
+  background: #b5e9fb;
+}
+.product--superscript {
+  background: #582d3a;
+  color: #fff;
+}
+.product-icon {
+  display: block;
+  margin: 0 auto 1em;
 }
 .product-title,
 .product-summary,
@@ -32,7 +49,12 @@ body {
   text-align: center;
 }
 .product-title {
+  margin: 0;
   font-size: 2em;
+  font-weight: 300;
+}
+.product-summary {
+  margin-top: 0;
   font-weight: 300;
 }
 .product-links {
