--- a/styles/site.css
+++ b/styles/site.css
@@ -23,7 +23,7 @@ body {
   padding: 50px 0;
 }
 .product--drawstring {
-  background: #fff9ad;
+  background: #ffeac5;
 }
 .product--genome {
   background: #fff;
