Changed 'superscript' to 'superscribe'. Changed superscript icon to hash icon. Added superscribe screenshot.

--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -5,6 +5,7 @@ body
   background white
   font-family Source Sans Pro, Tahoma, Arial, sans
   font-size (22/16)em
+  font-weight 300
   color #222
 
 // layout
@@ -42,8 +43,8 @@ body
   background #b5e9fb
 
 .product--superscript
-  background #582d3a
-  color white
+  padding-bottom 0
+  background #FAF9F7
 
 .product-icon
   display block
@@ -68,3 +69,9 @@ body
 
 .product-link
   margin 0 1em
+
+.product-screenshot
+  display block
+  width calc(100% + 150px)
+  max-width 1050px
+  margin 0 -75px
