Added drawstring screenshot. Changed all superscript references to superscribe.

--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -27,10 +27,14 @@ body
   text-align center
 
 .product
+  position relative
   padding 50px 0
+  box-shadow 0 0 100px rgba(black .2)
 
 .product--drawstring
+  padding-bottom 0
   background #FFEAC5
+  box-shadow none
 
 .product--genome
   background #fff
@@ -42,7 +46,7 @@ body
 .product--summer
   background #b5e9fb
 
-.product--superscript
+.product--superscribe
   padding-bottom 0
   background #FAF9F7
 
@@ -70,7 +74,13 @@ body
 .product-link
   margin 0 1em
 
-.product-screenshot
+.drawstring-screenshot
+  display block
+  width 410px
+  max-width 100%
+  margin 0 auto
+
+.superscribe-screenshot
   display block
   width calc(100% + 150px)
   max-width 1050px
