--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -8,6 +8,13 @@ body
   font-weight 300
   color #222
 
+a
+  font-weight bold
+  color inherit
+
+  &:hover
+    color #2957a3
+
 // layout
 
 .content
@@ -69,7 +76,7 @@ body
   font-weight 300
 
 .product-links
-  margin-top 2em
+  margin 2em 0
 
 .product-link
   margin 0 1em
@@ -82,6 +89,6 @@ body
 
 .superscribe-screenshot
   display block
-  width calc(100% + 150px)
-  max-width 1050px
-  margin 0 -75px
+  width 1050px
+  max-width 100%
+  margin 0 auto
