Removed color from Drawstring icon and changed Drawstring BG color to light green

--- a/styles/site.css
+++ b/styles/site.css
@@ -34,7 +34,7 @@ a:hover {
 }
 .product--drawstring {
   padding-bottom: 0;
-  background: #ffeac5;
+  background: #ddfff2;
   box-shadow: none;
 }
 .product--genome {
