Webfonts: cleaned up styling and removed notes column

--- a/src/styles/webfonts.styl
+++ b/src/styles/webfonts.styl
@@ -1,7 +1,9 @@
 // out: ../../webfonts/webfonts.css
 
 body
-  margin 1em
+  max-width 1000px
+  margin auto
+  padding 0 1em
 
 fieldset
   margin 0 0 2em
@@ -17,21 +19,18 @@ legend
   font-weight bold
 
 label
-  // float left
-  // clear left
   margin 1ex 1em 0 0
   padding 4px 0
 
 input
-  // float left
   margin-right 1ex
 
 th
+  width 20%
   padding-right 1em
   text-align left
 
 td
-  width 14%
   padding 1ex 1em 1ex 0
   border-top solid 1px #eee
 
