--- a/src/styles/webfonts.styl
+++ b/src/styles/webfonts.styl
@@ -1,15 +1,15 @@
 // out: ../../webfonts/webfonts.css
 
 body
-  max-width 1000px
-  margin auto
-  padding 0 1em
+  background #fafafa
+  color #333
 
 fieldset
   margin 0 0 2em
   padding 1em
   border none
-  background #eee
+  background #f45858
+  color white
 
 legend
   display block
@@ -22,21 +22,44 @@ label
   margin 1ex 1em 0 0
   padding 4px 0
 
-input
-  margin-right 1ex
-
-th
-  width 20%
-  padding-right 1em
-  text-align left
-
-td
-  padding 1ex 1em 1ex 0
-  border-top solid 1px #eee
-
-.sources
-  padding 1em
-  background #ddd
+.platformCheckbox
+  margin -2px 1ex 0 0
+  vertical-align middle
 
 .notes
-  color #999
+  color #888
+
+table
+  width 100%
+  margin-bottom 1em
+  border-spacing 0
+  font-weight normal
+
+th
+  padding 0 1ex 1ex 0
+  text-align left
+  vertical-align bottom
+
+.platformHeading
+  padding 1ex
+  border-bottom dotted 1px #bbb
+  text-align center
+
+.previewTextHeading
+  padding-right 0
+
+.previewText
+  width 100/7%
+  padding 1ex
+  border solid 1px #ddd
+  border-radius 2px
+
+td
+  width 14%
+  padding 1ex 1em 1ex 0
+  border-top solid 1px #ddd
+  overflow hidden
+  font-size 1rem
+
+.platformCell
+  text-align center
