--- a/src/styles/webfonts.styl
+++ b/src/styles/webfonts.styl
@@ -34,6 +34,7 @@ table
   margin-bottom 1em
   border-spacing 0
   font-weight normal
+  table-layout fixed
 
 th
   padding 0 1ex 1ex 0
@@ -49,13 +50,13 @@ th
   padding-right 0
 
 .previewText
-  width 100/7%
+  width 100%
   padding 1ex
   border solid 1px #ddd
   border-radius 2px
 
 td
-  width 14%
+  width (100/7)%
   padding 1ex 1em 1ex 0
   border-top solid 1px #ddd
   overflow hidden
@@ -63,3 +64,18 @@ td
 
 .platformCell
   text-align center
+
+// Sticky header
+
+.stickyHeader
+  position fixed
+  top -100px
+  left 0
+  right 0
+  padding-top 1ex
+  background #fafafa
+  transition top .5s
+
+  table
+    margin 0
+    border-bottom solid 1px #ddd
