--- a/webfonts/webfonts.css
+++ b/webfonts/webfonts.css
@@ -54,7 +54,7 @@ th {
   border-radius: 2px;
 }
 td {
-  width: 14.285714285714286%;
+  width: 12.5%;
   padding: 1ex 1em 1ex 0;
   border-top: solid 1px #ddd;
   overflow: hidden;
