Fixed nav link order

--- a/styles/site.css
+++ b/styles/site.css
@@ -99,7 +99,7 @@ section {
 }
 .product-link {
   display: inline-block;
-  margin: 1em;
+  margin: 1ex 1em;
   vertical-align: middle;
 }
 .drawstring-screenshot {
