--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -105,7 +105,7 @@ section
 
 .product-link
   display inline-block
-  margin 1em
+  margin 1ex 1em
   vertical-align middle
 
 .drawstring-screenshot
