--- a/styles/site.css
+++ b/styles/site.css
@@ -232,3 +232,6 @@ button {
 .preview [generated-content]::after {
   content: attr(generated-content);
 }
+.portfolio-section {
+  background-image: linear-gradient(45deg, #222, #444);
+}
