Added slm-autocompile section

--- a/styles/site.css
+++ b/styles/site.css
@@ -84,6 +84,9 @@ section {
 .product--genome {
   background: #fff;
 }
+.product--slm-autocompile {
+  background: #eee;
+}
 .product--seconds {
   background: #64297a;
   color: #fff;
