--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -90,6 +90,9 @@ section
 .product--genome
   background #fff
 
+.product--slm-autocompile
+  background #eee
+
 .product--seconds
   background #64297a
   color white
