Added portfolio page

--- a/src/styles/portfolio.styl
+++ b/src/styles/portfolio.styl
@@ -1,4 +1,21 @@
 // main: site.styl
 
 .portfolio-section
-  background-image linear-gradient(45deg, #222, #444)
+  background-color #333
+  background-image linear-gradient(20deg, #666, #444)
+  color #fff
+
+.portfolio-screenshot
+  width 100%
+  border-radius 5px
+
+.portfolio-screenshot--two-thirds
+  width 70%
+  vertical-align top
+  border-radius 5px
+
+.portfolio-screenshot--one-third
+  width 28%
+  margin-left 2%
+  vertical-align top
+  border-radius 5px
