--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -10,6 +10,7 @@ body
   font-size (22/16)em
   font-weight 300
   color #222
+  overflow-x hidden
 
 a
   font-weight 600
@@ -40,11 +41,30 @@ header
   background #b1e3f1
 
 footer
+section
+  &::before
+    content ''
+    display block
+    position absolute
+    top -40px
+    right 0
+    height 0
+    width 0
+    border-top solid 20px transparent
+    border-left solid 50vw transparent
+    border-right solid 50vw transparent
+    border-bottom solid 20px transparent
+
+footer
   position relative
   padding 1em 0
   background #cc4a4a
   text-align center
   color #fff
+
+  &::before
+    border-right-color #cc4a4a
+    border-bottom-color #cc4a4a
 
 section
   position relative
@@ -77,10 +97,16 @@ section
   text-decoration none
 
 .product--alt-fight
+  padding-top 70px
   padding-bottom 0
   background-color #ffdf00
   background-image linear-gradient(to bottom right, #e8c03c, #ffdf00 10%, #f5c832 20%, #f5c832 80%, #ffdf00 90%, #e8c03c)
   box-shadow none
+
+  &::before
+    top 0
+    border-top-color #f45858
+    border-left-color #f45858
 
 .product--drawstring
   padding-bottom 0
@@ -88,10 +114,18 @@ section
   box-shadow none
 
 .product--genome
-  background #fff
+  background #eee
+
+  &::before
+    border-right-color #eee
+    border-bottom-color #eee
 
 .product--slm-autocompile
-  background #eee
+  background #fff
+
+  &::before
+    border-right-color #fff
+    border-bottom-color #fff
 
 .product--seconds
   background #64297a
@@ -101,9 +135,17 @@ section
   padding-bottom 0
   background #ffeb86
 
+  &::before
+    border-right-color #ffeb86
+    border-bottom-color #ffeb86
+
 .product--superscribe
   padding-bottom 0
   background #b1e3f1
+
+  &::before
+    border-right-color #b1e3f1
+    border-bottom-color #b1e3f1
 
 .product-icon
   display block
@@ -157,9 +199,14 @@ section
   margin 0 auto
 
 .contact
+  padding-top 20px
   background #f45858
   text-align center
   color #fff
+
+  &::before
+    border-right-color #f45858
+    border-bottom-color #f45858
 
 @import './superscript-preview.styl'
 @import './portfolio.styl'
