--- a/styles/site.css
+++ b/styles/site.css
@@ -8,6 +8,7 @@ body {
   font-size: 1.375em;
   font-weight: 300;
   color: #222;
+  overflow-x: hidden;
 }
 a {
   font-weight: 600;
@@ -35,12 +36,30 @@ header {
   padding-bottom: 1em;
   background: #b1e3f1;
 }
+footer::before,
+section::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -40px;
+  right: 0;
+  height: 0;
+  width: 0;
+  border-top: solid 20px transparent;
+  border-left: solid 50vw transparent;
+  border-right: solid 50vw transparent;
+  border-bottom: solid 20px transparent;
+}
 footer {
   position: relative;
   padding: 1em 0;
   background: #cc4a4a;
   text-align: center;
   color: #fff;
+}
+footer::before {
+  border-right-color: #cc4a4a;
+  border-bottom-color: #cc4a4a;
 }
 section {
   position: relative;
@@ -71,10 +90,16 @@ section {
   text-decoration: none;
 }
 .product--alt-fight {
+  padding-top: 70px;
   padding-bottom: 0;
   background-color: #ffdf00;
   background-image: linear-gradient(to bottom right, #e8c03c, #ffdf00 10%, #f5c832 20%, #f5c832 80%, #ffdf00 90%, #e8c03c);
   box-shadow: none;
+}
+.product--alt-fight::before {
+  top: 0;
+  border-top-color: #f45858;
+  border-left-color: #f45858;
 }
 .product--drawstring {
   padding-bottom: 0;
@@ -82,10 +107,18 @@ section {
   box-shadow: none;
 }
 .product--genome {
-  background: #fff;
+  background: #eee;
+}
+.product--genome::before {
+  border-right-color: #eee;
+  border-bottom-color: #eee;
 }
 .product--slm-autocompile {
-  background: #eee;
+  background: #fff;
+}
+.product--slm-autocompile::before {
+  border-right-color: #fff;
+  border-bottom-color: #fff;
 }
 .product--seconds {
   background: #64297a;
@@ -95,9 +128,17 @@ section {
   padding-bottom: 0;
   background: #ffeb86;
 }
+.product--summer::before {
+  border-right-color: #ffeb86;
+  border-bottom-color: #ffeb86;
+}
 .product--superscribe {
   padding-bottom: 0;
   background: #b1e3f1;
+}
+.product--superscribe::before {
+  border-right-color: #b1e3f1;
+  border-bottom-color: #b1e3f1;
 }
 .product-icon {
   display: block;
@@ -151,9 +192,14 @@ section {
   margin: 0 auto;
 }
 .contact {
+  padding-top: 20px;
   background: #f45858;
   text-align: center;
   color: #fff;
+}
+.contact::before {
+  border-right-color: #f45858;
+  border-bottom-color: #f45858;
 }
 button {
   font: caption;
@@ -236,5 +282,22 @@ button {
   content: attr(generated-content);
 }
 .portfolio-section {
-  background-image: linear-gradient(45deg, #222, #444);
+  background-color: #333;
+  background-image: linear-gradient(20deg, #666, #444);
+  color: #fff;
+}
+.portfolio-screenshot {
+  width: 100%;
+  border-radius: 5px;
+}
+.portfolio-screenshot--two-thirds {
+  width: 70%;
+  vertical-align: top;
+  border-radius: 5px;
+}
+.portfolio-screenshot--one-third {
+  width: 28%;
+  margin-left: 2%;
+  vertical-align: top;
+  border-radius: 5px;
 }
