--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -93,7 +93,7 @@ section
 .nav-link
   display inline-block
   width 150px
-  height 50px
+  min-height 50px
   text-decoration none
 
 .product--alt-fight
