--- a/styles/site.css
+++ b/styles/site.css
@@ -86,7 +86,7 @@ section {
 .nav-link {
   display: inline-block;
   width: 150px;
-  height: 50px;
+  min-height: 50px;
   text-decoration: none;
 }
 .product--alt-fight {
@@ -283,21 +283,44 @@ button {
 }
 .portfolio-section {
   background-color: #333;
-  background-image: linear-gradient(20deg, #666, #444);
+  background-image: linear-gradient(-3deg, #555, #444);
   color: #fff;
+}
+.portfolio-section::before {
+  border-right-color: #444;
+  border-bottom-color: #444;
+}
+.portfolio-section:first-of-type {
+  box-shadow: none;
+}
+.portfolio-section:first-of-type::before {
+  top: 0;
+  border-top-color: #f45858;
+  border-left-color: #f45858;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
 }
 .portfolio-screenshot {
   width: 100%;
-  border-radius: 5px;
+  border-radius: 3px;
+}
+.portfolio-screenshot--half {
+  width: 48%;
+  margin-right: 4%;
+  vertical-align: top;
+  border-radius: 3px;
+}
+.portfolio-screenshot--half + .portfolio-screenshot--half {
+  margin-right: 0;
 }
 .portfolio-screenshot--two-thirds {
   width: 70%;
   vertical-align: top;
-  border-radius: 5px;
+  border-radius: 3px;
 }
 .portfolio-screenshot--one-third {
   width: 28%;
   margin-left: 2%;
   vertical-align: top;
-  border-radius: 5px;
+  border-radius: 3px;
 }
