--- a/src/styles/portfolio.styl
+++ b/src/styles/portfolio.styl
@@ -1,7 +1,7 @@
 // main: site.styl
 
 .portfolio-section
-  background-color #333
+  background-color #444
   background-image linear-gradient(-3deg, #555, #444)
   color #fff
 
@@ -41,4 +41,12 @@
   width 28%
   margin-left 2%
   vertical-align top
+  border-radius 3px
+
+.center-image
+  display block
+  max-width 100%
+  margin auto
+
+.rounded-image
   border-radius 3px
