Added SVG animation to portfolio

--- a/src/styles/portfolio.styl
+++ b/src/styles/portfolio.styl
@@ -50,3 +50,7 @@
 
 .rounded-image
   border-radius 3px
+
+@import './saving-checkbox.styl'
+@import './rolling-checkbox.styl'
+@import './drawstring.styl'
