--- a/styles/site.css
+++ b/styles/site.css
@@ -332,3 +332,420 @@ button {
 .rounded-image {
   border-radius: 3px;
 }
+.checkbox-toggle {
+  margin: 1em 0;
+  padding: 1em;
+  border: solid 2px #fff;
+  border-radius: 10px;
+  background: #fff;
+  background-image: linear-gradient(#fff, #ddd);
+  box-shadow: 0 2px 2px rgba(0,0,0,0.5);
+  font-size: 20px;
+  line-height: 1;
+  outline: none;
+  transition: box-shadow 0.2s, transform 0.2s;
+}
+.checkbox-toggle:active {
+  box-shadow: none;
+  transform: translateY(2px);
+}
+.checkbox-toggle .checkbox-icon {
+  width: 1em;
+  height: 1em;
+  margin-right: 1ex;
+  transform: translate3d(0, 0, 0);
+  transition: transform 0.5s;
+  vertical-align: text-bottom;
+}
+.checkbox-toggle .checkbox-icon.spinning {
+  transform: scale(0.8);
+}
+.checkbox-toggle .checkbox-icon path {
+  fill: none;
+}
+.checkbox-toggle .square {
+  stroke: #222;
+  stroke-width: 10px;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 360 260;
+  stroke-dashoffset: 0;
+  transition: stroke-dasharray 0.5s ease-in, stroke-dashoffset 0.5s ease-in, stroke 0.5s;
+}
+.checkbox-toggle .spinning > .square {
+  stroke-dasharray: 30 330;
+  animation: spin 1s linear infinite;
+  animation-delay: 0.5s;
+  stroke: #aaa;
+}
+.checkbox-toggle .checked > .square {
+  stroke-dasharray: 310 50;
+  stroke-dashoffset: -10;
+  stroke: #52b87c;
+}
+.checkbox-toggle .checkmark {
+  stroke: #aaa;
+  stroke-width: 20px;
+  stroke-dasharray: 130 150;
+  stroke-dashoffset: 140;
+  transition: stroke-dashoffset 0.5s 0.2s;
+}
+.checkbox-toggle .checked > .checkmark {
+  stroke-dashoffset: 0;
+  stroke: #52b87c;
+}
+@-moz-keyframes spin {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: 360;
+  }
+}
+@-webkit-keyframes spin {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: 360;
+  }
+}
+@-o-keyframes spin {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: 360;
+  }
+}
+@keyframes spin {
+  from {
+    stroke-dashoffset: 0;
+  }
+  to {
+    stroke-dashoffset: 360;
+  }
+}
+.checkbox-wrap {
+  padding: 1em 0;
+}
+.rolling-checkbox {
+  width: 100px;
+}
+.rolling-checkbox.roll {
+  animation: roll 1.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+.box {
+  fill: none;
+  stroke: #52b87c;
+  stroke-width: 10px;
+  stroke-dasharray: 300 0;
+  stroke-dashoffset: -106;
+  transition: stroke-dasharray 0.3s;
+}
+.roll .box {
+  stroke-dasharray: 300 60;
+  transition: stroke-dasharray 0.3s 1.5s;
+}
+.checkmark {
+  fill: none;
+  stroke: #52b87c;
+  stroke-width: 10px;
+  stroke-width: 20px;
+  stroke-dasharray: 120 200;
+  stroke-dashoffset: 130;
+  transition: stroke-dashoffset 0.3s;
+}
+.roll .checkmark {
+  stroke-dashoffset: 0;
+  transition: stroke-dashoffset 0.3s 1.5s;
+}
+@-moz-keyframes roll {
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  10% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  15% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  20% {
+    transform: translate(50px, -20px) rotate(45deg);
+  }
+  25% {
+    transform: translate(50px, -18px) rotate(50deg);
+  }
+  30% {
+    transform: translate(100px, 0) rotate(90deg);
+  }
+  35% {
+    transform: translate(100px, 0) rotate(95deg);
+  }
+  40% {
+    transform: translate(150px, -20px) rotate(135deg);
+  }
+  45% {
+    transform: translate(150px, -18px) rotate(140deg);
+  }
+  50% {
+    transform: translate(200px, 0) rotate(180deg);
+  }
+  55% {
+    transform: translate(200px, 0) rotate(185deg);
+  }
+  60% {
+    transform: translate(250px, -20px) rotate(225deg);
+  }
+  65% {
+    transform: translate(250px, -18px) rotate(230deg);
+  }
+  70% {
+    transform: translate(300px, 0) rotate(270deg);
+  }
+  75% {
+    transform: translate(350px, -20px) rotate(315deg);
+  }
+  80% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+  90% {
+    transform: translate(425px, -12px) rotate(382deg);
+  }
+  100% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+}
+@-webkit-keyframes roll {
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  10% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  15% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  20% {
+    transform: translate(50px, -20px) rotate(45deg);
+  }
+  25% {
+    transform: translate(50px, -18px) rotate(50deg);
+  }
+  30% {
+    transform: translate(100px, 0) rotate(90deg);
+  }
+  35% {
+    transform: translate(100px, 0) rotate(95deg);
+  }
+  40% {
+    transform: translate(150px, -20px) rotate(135deg);
+  }
+  45% {
+    transform: translate(150px, -18px) rotate(140deg);
+  }
+  50% {
+    transform: translate(200px, 0) rotate(180deg);
+  }
+  55% {
+    transform: translate(200px, 0) rotate(185deg);
+  }
+  60% {
+    transform: translate(250px, -20px) rotate(225deg);
+  }
+  65% {
+    transform: translate(250px, -18px) rotate(230deg);
+  }
+  70% {
+    transform: translate(300px, 0) rotate(270deg);
+  }
+  75% {
+    transform: translate(350px, -20px) rotate(315deg);
+  }
+  80% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+  90% {
+    transform: translate(425px, -12px) rotate(382deg);
+  }
+  100% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+}
+@-o-keyframes roll {
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  10% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  15% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  20% {
+    transform: translate(50px, -20px) rotate(45deg);
+  }
+  25% {
+    transform: translate(50px, -18px) rotate(50deg);
+  }
+  30% {
+    transform: translate(100px, 0) rotate(90deg);
+  }
+  35% {
+    transform: translate(100px, 0) rotate(95deg);
+  }
+  40% {
+    transform: translate(150px, -20px) rotate(135deg);
+  }
+  45% {
+    transform: translate(150px, -18px) rotate(140deg);
+  }
+  50% {
+    transform: translate(200px, 0) rotate(180deg);
+  }
+  55% {
+    transform: translate(200px, 0) rotate(185deg);
+  }
+  60% {
+    transform: translate(250px, -20px) rotate(225deg);
+  }
+  65% {
+    transform: translate(250px, -18px) rotate(230deg);
+  }
+  70% {
+    transform: translate(300px, 0) rotate(270deg);
+  }
+  75% {
+    transform: translate(350px, -20px) rotate(315deg);
+  }
+  80% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+  90% {
+    transform: translate(425px, -12px) rotate(382deg);
+  }
+  100% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+}
+@keyframes roll {
+  0% {
+    transform: translate(0, 0) rotate(0);
+  }
+  10% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  15% {
+    transform: translate(-25px, -12px) rotate(-22deg);
+  }
+  20% {
+    transform: translate(50px, -20px) rotate(45deg);
+  }
+  25% {
+    transform: translate(50px, -18px) rotate(50deg);
+  }
+  30% {
+    transform: translate(100px, 0) rotate(90deg);
+  }
+  35% {
+    transform: translate(100px, 0) rotate(95deg);
+  }
+  40% {
+    transform: translate(150px, -20px) rotate(135deg);
+  }
+  45% {
+    transform: translate(150px, -18px) rotate(140deg);
+  }
+  50% {
+    transform: translate(200px, 0) rotate(180deg);
+  }
+  55% {
+    transform: translate(200px, 0) rotate(185deg);
+  }
+  60% {
+    transform: translate(250px, -20px) rotate(225deg);
+  }
+  65% {
+    transform: translate(250px, -18px) rotate(230deg);
+  }
+  70% {
+    transform: translate(300px, 0) rotate(270deg);
+  }
+  75% {
+    transform: translate(350px, -20px) rotate(315deg);
+  }
+  80% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+  90% {
+    transform: translate(425px, -12px) rotate(382deg);
+  }
+  100% {
+    transform: translate(400px, 0) rotate(360deg);
+  }
+}
+button {
+  margin: 1em 0;
+  padding: 1em;
+  border: solid 2px #fff;
+  border-radius: 10px;
+  background: #fff;
+  background-image: linear-gradient(#fff, #ddd);
+  box-shadow: 0 2px 2px rgba(0,0,0,0.5);
+  font-size: 20px;
+  line-height: 1;
+  outline: none;
+  transition: box-shadow 0.2s, transform 0.2s;
+}
+button:active {
+  box-shadow: none;
+  transform: translateY(2px);
+}
+.drawstring-path {
+  stroke: #52b87c;
+  stroke-linecap: round;
+  stroke-miterlimit: 10;
+  stroke-width: 3px;
+  stroke-dasharray: 400% 400%;
+  stroke-dashoffset: -400%;
+  fill: none;
+  animation: draw 5s infinite linear;
+  animation-play-state: paused;
+}
+.drawstring-path.drawing {
+  animation-play-state: running;
+}
+@-moz-keyframes draw {
+  0% {
+    stroke-dashoffset: -400%;
+  }
+  100% {
+    stroke-dashoffset: 400%;
+  }
+}
+@-webkit-keyframes draw {
+  0% {
+    stroke-dashoffset: -400%;
+  }
+  100% {
+    stroke-dashoffset: 400%;
+  }
+}
+@-o-keyframes draw {
+  0% {
+    stroke-dashoffset: -400%;
+  }
+  100% {
+    stroke-dashoffset: 400%;
+  }
+}
+@keyframes draw {
+  0% {
+    stroke-dashoffset: -400%;
+  }
+  100% {
+    stroke-dashoffset: 400%;
+  }
+}
