--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -36,10 +36,6 @@ header
   text-align center
   color #fff
 
-.header--superscribe
-  padding-bottom 1em
-  background #b1e3f1
-
 footer
 section
   &::before
@@ -105,8 +101,8 @@ section
 
   &::before
     top 0
-    border-top-color #f45858
-    border-left-color #f45858
+    border-top-color #fff
+    border-left-color #fff
 
 .product--drawstring
   padding-bottom 0
@@ -146,13 +142,22 @@ section
     border-right-color #ffeb86
     border-bottom-color #ffeb86
 
-.product--superscribe
+.product--superscript
   padding-bottom 0
-  background #b1e3f1
+  background #fff
+  box-shadow none
 
   &::before
-    border-right-color #b1e3f1
-    border-bottom-color #b1e3f1
+    top 0
+    border-top-color #f45858
+    border-left-color #f45858
+
+  .product-icon
+    display block
+    margin 0 auto
+
+  .product-title
+    color #5f2165
 
 .product-icon
   display block
@@ -197,12 +202,6 @@ section
 .summer-screenshot
   display block
   width 400px
-  max-width 100%
-  margin 0 auto
-
-.superscribe-screenshot
-  display block
-  width 1050px
   max-width 100%
   margin 0 auto
 
