--- a/styles/site.css
+++ b/styles/site.css
@@ -32,10 +32,6 @@ header {
   text-align: center;
   color: #fff;
 }
-.header--superscribe {
-  padding-bottom: 1em;
-  background: #b1e3f1;
-}
 footer::before,
 section::before {
   content: '';
@@ -98,8 +94,8 @@ section {
 }
 .product--alt-fight::before {
   top: 0;
-  border-top-color: #f45858;
-  border-left-color: #f45858;
+  border-top-color: #fff;
+  border-left-color: #fff;
 }
 .product--drawstring {
   padding-bottom: 0;
@@ -139,13 +135,22 @@ section {
   border-right-color: #ffeb86;
   border-bottom-color: #ffeb86;
 }
-.product--superscribe {
+.product--superscript {
   padding-bottom: 0;
-  background: #b1e3f1;
+  background: #fff;
+  box-shadow: none;
 }
-.product--superscribe::before {
-  border-right-color: #b1e3f1;
-  border-bottom-color: #b1e3f1;
+.product--superscript::before {
+  top: 0;
+  border-top-color: #f45858;
+  border-left-color: #f45858;
+}
+.product--superscript .product-icon {
+  display: block;
+  margin: 0 auto;
+}
+.product--superscript .product-title {
+  color: #5f2165;
 }
 .product-icon {
   display: block;
@@ -190,12 +195,6 @@ section {
 .summer-screenshot {
   display: block;
   width: 400px;
-  max-width: 100%;
-  margin: 0 auto;
-}
-.superscribe-screenshot {
-  display: block;
-  width: 1050px;
   max-width: 100%;
   margin: 0 auto;
 }
