--- a/styles/site.css
+++ b/styles/site.css
@@ -89,13 +89,12 @@ section {
   padding-top: 70px;
   padding-bottom: 0;
   background-color: #ffdf00;
-  background-image: linear-gradient(to bottom right, #e8c03c, #ffdf00 10%, #f5c832 20%, #f5c832 80%, #ffdf00 90%, #e8c03c);
+  background-image: linear-gradient(#f5c832 20%, #f5c832 80%, #ffdf00 90%, #e8c03c);
   box-shadow: none;
 }
 .product--alt-fight::before {
-  top: 0;
-  border-top-color: #fff;
-  border-left-color: #fff;
+  border-right-color: #f5c832;
+  border-bottom-color: #f5c832;
 }
 .product--drawstring {
   padding-bottom: 0;
@@ -138,6 +137,7 @@ section {
 .product--superscript {
   padding-bottom: 0;
   background: #fff;
+  background-image: linear-gradient(#fff 100px, #e0e7eb 50%);
   box-shadow: none;
 }
 .product--superscript::before {
@@ -151,6 +151,15 @@ section {
 }
 .product--superscript .product-title {
   color: #5f2165;
+}
+.product-title--superscript {
+  margin-bottom: 10px;
+  font-family: Asap, Source Sans Pro, Tahoma, Arial, sans;
+}
+.comixcentral-badge {
+  display: block;
+  width: 300px;
+  margin: 0 auto;
 }
 .product-icon {
   display: block;
@@ -180,6 +189,18 @@ section {
   display: inline-block;
   margin: 1em 1em;
 }
+.kickstarter-link {
+  display: block;
+  width: 350px;
+  margin: 1em auto 0;
+  border: solid 2px #004650;
+  border-radius: 5px;
+  text-align: center;
+  color: #004650;
+}
+.kickstarter-link:hover {
+  background: #fff;
+}
 .alt-fight-screenshot {
   display: block;
   width: 700px;
@@ -195,6 +216,12 @@ section {
 .summer-screenshot {
   display: block;
   width: 400px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+.superscript-screenshot {
+  display: block;
+  width: 900px;
   max-width: 100%;
   margin: 0 auto;
 }
