--- a/src/styles/site.styl
+++ b/src/styles/site.styl
@@ -148,9 +148,12 @@ section
   box-shadow none
 
   &::before
-    top 0
+    position relative
+    top -50px
     border-top-color #f45858
     border-left-color #f45858
+    border-right-color #fff
+    border-bottom-color #fff
 
   .product-icon
     display block
