--- a/styles/site.css
+++ b/styles/site.css
@@ -141,9 +141,12 @@ section {
   box-shadow: none;
 }
 .product--superscript::before {
-  top: 0;
+  position: relative;
+  top: -50px;
   border-top-color: #f45858;
   border-left-color: #f45858;
+  border-right-color: #fff;
+  border-bottom-color: #fff;
 }
 .product--superscript .product-icon {
   display: block;
